Refactor: Changed end point names in the routes, test cases, swagger.
